# WDTaggerAppend

./: LICENSE-MIT  README.md  pyproject.toml
scripts/: quantization_benchmark.py
src/wd_tagger_append/: __init__.py  augmentation.py  augmentations.py  constants.py  custom_processing.py  dataset_utils.py  infer.py  inference_utils.py  labels.py  lora_config.py  loss.py  merge_and_upload.py  metrics.py  model_export.py  pipeline.py  prediction.py  prepare_dataset.py  stratification.py  train.py  upload_tags.py
src/wd_tagger_append/training/: __init__.py  consistency_trainer.py  teacher.py
tests/: liger-kernel-eva.py  test_consistency_trainer.py  test_infer_cli.py  test_metrics.py  test_stratification.py  test_train_precomputed.py
