[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wd_tagger_append"
version = "0.1.0"
description = "Fine-tuning and deployment toolkit for WD Tagger image tagging models"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
keywords = [
  "deep-learning",
  "image-tagging",
  "pytorch",
  "transformers",
  "lora",
  "huggingface",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "accelerate>=1.10.1",
  "datasets[vision]>=4.2.0",
  "evaluate>=0.4.6",
  "gradio>=5.49.1",
  "huggingface-hub>=0.35.3",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "peft>=0.17.1",
  "pillow>=11.3.0",
  "timm>=1.0.20",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.0",
  "typer>=0.19.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
wd-tagger-train = "wd_tagger_append.train:main"
wd-tagger-infer = "wd_tagger_append.infer:main"
wd-tagger-prepare = "wd_tagger_append.prepare_dataset:main"
wd-tagger-upload-tags = "wd_tagger_append.upload_tags:main"
wd-tagger-merge-upload = "wd_tagger_append.merge_and_upload:main"

[dependency-groups]
dev = [
  "pip-licenses>=5.0.0",
  "pyright>=1.1.405",
  "pytest>=8.4.2",
  "ruff>=0.13.0",
]

[tool.ruff]
extend-exclude = []
line-length = 100
target-version = "py311"
output-format = "grouped"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["wd_tagger_append"] }

[tool.ruff.format]
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff.lint.pydocstyle]
convention = "google"
